--- a/TP2_28.09.23/Makefile
+++ b/TP2_28.09.23/Makefile
@@ -8,8 +8,8 @@ EXECUTABLE = $(RESOURCES:.c=)
 
 all: $(EXECUTABLE)
 
-%: %.c
-	$(C) $< functions.c -o $@
+%: %.c functions.c
+	$(C) $^ -o $@
 	./$@
 
 clean:
